# forge

./: .gitignore  Cargo.toml  README.md
scripts/: install.sh
src/: error.rs  lib.rs  main.rs  utils.rs
src/cli/: build.rs  clean.rs  config.rs  init.rs  mod.rs  new.rs  prompter.rs  run.rs  testing.rs
src/core/: build_system.rs  builder.rs  compiler.rs  config.rs  language.rs  mod.rs  package.rs  package_manager.rs  scaffolder.rs  test_framework.rs
src/core/builder/: cmake.rs
