[package]
name = "forge-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = { version = "0.7.5", features = ["date", "editor"] }
anyhow = { version="1.0.98" }
strum = "0.27"
strum_macros = "0.27"
which="7.0.3"
serde_json = "1.0"
clap = { version = "4.5.37", features = ["derive"] }
thiserror ="2.0.12"

[lib]
path="src/lib.rs"

[[bin]]
name="forge"
path="src/main.rs"
